--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1>46. Fáze adolescence jsou... .</h1>
+<h1 title="Slepičková: Specifické_sociální_skupiny.pptx">46. Fáze adolescence jsou... .</h1>
 <hr/>
 <input class="display" id="text46" placeholder="answer">
 <br/>
@@ -895,7 +895,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">47. Časná adolescence je ve věku ... . </h1>
+<h1 title="Slepičková: Specifické_sociální_skupiny.pptx">47. Časná adolescence je ve věku ... . </h1>
 <hr/>
 <input class="display" id="text47" placeholder="answer">
 <br/>
@@ -905,7 +905,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">48. Pozdní adolescence je ve věku ... . </h1>
+<h1 title="Slepičková: Specifické_sociální_skupiny.pptx">48. Pozdní adolescence je ve věku ... . </h1>
 <hr/>
 <input class="display" id="text48" placeholder="answer">
 <br/>
@@ -915,7 +915,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">49. Střední adolescence je ve věku ... . </h1>
+<h1 title="Slepičková: Specifické_sociální_skupiny.pptx">49. Střední adolescence je ve věku ... . </h1>
 <hr/>
 <input class="display" id="text49" placeholder="answer">
 <br/>
@@ -925,13 +925,13 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">50. "lakomství" - doplň případné ctnosti a extrémy  </h1>
+<h1 title="Slepičková: Specifické_sociální_skupiny.pptx">50. Časná adolescence je obdobím ... </h1>
 <hr/>
 <input class="display" id="text50" placeholder="answer">
 <br/>
 <button onclick="fn50()" id = "btn50">Klikni</button>
 <button id="cudlik50" style="display:none" onclick="next(50)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='štědrost, marnotratnost'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='prvních biol. a fyz. změn'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1853,7 +1853,7 @@ document.getElementById('zvuk49').play(); return false;
 
 function fn50()
 {
-if (document.getElementById("text50").value == "štědrost, marnotratnost") {
+if (document.getElementById("text50").value == "prvních biol. a fyz. změn") {
 document.getElementById('cudlik50').style.display = "inline";
 document.getElementById('zvuk50').play(); return false;
 }
